--- a/index.html
+++ b/index.html
@@ -40,7 +40,23 @@
                     <td>120 &euro; </td>
                 </tr>
 
+                <tr>
+                    <td>1</td>
+                    <td>Biglietto Aereo</td>
+                    <td>120 &euro; </td>
+                </tr>
 
+                <tr>
+                    <td>1</td>
+                    <td>Biglietto Aereo</td>
+                    <td>120 &euro; </td>
+                </tr>
+
+                <tr>
+                    <td>Totale</td>
+                    <td></td>
+                    <td>360 &euro; </td>
+                </tr>
             </table>
             <hr>
         </section>
@@ -51,30 +67,51 @@
         <section>
         <h2>Cose da fare</h2>
         <ul>
-            <li>Visitare la Tower of london</li>
-            <li>Visitare greenwich</li>
-            <li>Ascoltare un artista di strada a Covent Grant</li>
-            <li>Mangiare il tipico Fish and Chips inglese</li>
+            <li>Visitare la Tower of london &#10006;</li>
+            <li>Visitare greenwich &#10004;</li>
+            <li>Ascoltare un artista di strada a Covent Grant &#10004;</li>
+            <li>Mangiare il tipico Fish and Chips inglese &#10006;</li>
         </ul>
         <hr>
         </section>
 
 
 
+        <!--Info Uitili-->
+        <section>
+            <h2>Info utili:</h2>
+            <ol>
+                <li>Numeri utili di emergenza</li>
+                <ul>
+                    <li>999 - Emergenza</li>    
+                    <li>101 - Numero Polizia</li>
+                    <li>111 - Numero Assistenza medica</li>
+                </ul>
+
+                <li>Hotel</li>
+                <ul>
+                    <li><strong>Nome hotel:</strong> Buckingham palace</li>
+                    <li><strong>indirizzo hotel:</strong> westimister, london SW1A 1AA, Regno Unito</li>
+                </ul>
+
+                <li>Aereo</li>
+                <ul>
+                    <li><strong>Volo di andata:</strong>ore 09:30 da Milano Malpensa</li>
+                    <li><strong>Volo di ritorno:</strong> ore 18:30 da london hearthrow</li>
+                </ul>
+            </ol>
+            <hr>
+        </section>
+
     </main>
-
-
-
-
-
 
 
     <!--Coda pagina-->
     <footer>
+        <h3><strong>Le Foto</strong></h3>
         <img src="https://www.abta.com/sites/default/files/styles/large/public/media/uploads/london-400x400-compressor_0.jpg" alt="foto">
+        <img src="https://imgc.allpostersimages.com/img/posters/evening-tower-bridge-and-river-thames-london_u-L-P2QVZJ0.jpg?artPerspective=n" alt="foto 2">
     </footer>
-
-
 </body>
 
 
