updated general code .html

--- a/index.html
+++ b/index.html
@@ -1,31 +1,23 @@
 <!DOCTYPE html>
 <html lang="it">
 
-
-<!--attributi della pagina web-->
-<head> 
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Esercizio numero 2</title>
-</head> 
-
+</head>
 
 <body>
-    <!--Parte iniziale pagina-->
-    <header>
+    <header> <!--Testa paagina-->
         <h1>Il mio Viaggio a Londra</h1>
         <img src="./img/mario.jpg" alt="prima foto (mario)">
         <img src="./img/paolo.jpg" alt="seconda foto(paolo)">
         <img src="./img/marco.jpg" alt="terza foto(marco)">
         <hr>
     </header>
-    
 
-
-    <main>        
-        
-        <!--Tabella Spese-->
-        <section>
+    <main>
+        <section> <!--Tabella prezzi-->
             <p><strong>Le mie spese</strong></p>
             <table>
                 <tr>
@@ -37,25 +29,25 @@
                 <tr>
                     <td>1</td>
                     <td>Biglietto Aereo</td>
-                    <td>120 &euro; </td>
+                    <td>120 &euro;</td>
                 </tr>
 
                 <tr>
-                    <td>1</td>
-                    <td>Biglietto Aereo</td>
-                    <td>120 &euro; </td>
+                    <td>2</td>
+                    <td>Biglietto Treno</td>
+                    <td>50 &euro;</td>
                 </tr>
 
                 <tr>
-                    <td>1</td>
-                    <td>Biglietto Aereo</td>
-                    <td>120 &euro; </td>
+                    <td>3</td>
+                    <td>Hotel</td>
+                    <td>190 &euro;</td>
                 </tr>
 
                 <tr>
                     <td>Totale</td>
                     <td></td>
-                    <td>360 &euro; </td>
+                    <td>360 &euro;</td>
                 </tr>
             </table>
             <hr>
@@ -63,56 +55,56 @@
 
 
 
-        <!--Lista delle cose da fare-->
-        <section>
-        <h2>Cose da fare</h2>
-        <ul>
-            <li>Visitare la Tower of london &#10006;</li>
-            <li>Visitare greenwich &#10004;</li>
-            <li>Ascoltare un artista di strada a Covent Grant &#10004;</li>
-            <li>Mangiare il tipico Fish and Chips inglese &#10006;</li>
-        </ul>
-        <hr>
+
+        <section> <!-- todolist -->
+            <h2>Cose da fare</h2>
+            <ul>
+                <li>Visitare la Tower of London &#10006;</li>
+                <li>Visitare Greenwich &#10004;</li>
+                <li>Ascoltare un artista di strada a Covent Garden &#10004;</li>
+                <li>Mangiare il tipico Fish and Chips inglese &#10006;</li>
+            </ul>
+            <hr>
         </section>
 
 
 
-        <!--Info Uitili-->
-        <section>
+
+        <section> <!--info utili-->
             <h2>Info utili:</h2>
             <ol>
                 <li>Numeri utili di emergenza</li>
                 <ul>
-                    <li>999 - Emergenza</li>    
+                    <li>999 - Emergenza</li>
                     <li>101 - Numero Polizia</li>
                     <li>111 - Numero Assistenza medica</li>
                 </ul>
 
                 <li>Hotel</li>
                 <ul>
-                    <li><strong>Nome hotel:</strong> Buckingham palace</li>
-                    <li><strong>indirizzo hotel:</strong> westimister, london SW1A 1AA, Regno Unito</li>
+                    <li><strong>Nome hotel:</strong> Buckingham Palace</li>
+                    <li><strong>Indirizzo hotel:</strong> Westminster, London SW1A 1AA, Regno Unito</li>
                 </ul>
 
                 <li>Aereo</li>
                 <ul>
-                    <li><strong>Volo di andata:</strong>ore 09:30 da Milano Malpensa</li>
-                    <li><strong>Volo di ritorno:</strong> ore 18:30 da london hearthrow</li>
+                    <li><strong>Volo di andata:</strong> ore 09:30 da Milano Malpensa</li>
+                    <li><strong>Volo di ritorno:</strong> ore 18:30 da London Heathrow</li>
                 </ul>
             </ol>
             <hr>
         </section>
-
     </main>
 
 
-    <!--Coda pagina-->
-    <footer>
+    <footer> <!--Coda Pagina-->
         <h3><strong>Le Foto</strong></h3>
-        <img src="https://www.abta.com/sites/default/files/styles/large/public/media/uploads/london-400x400-compressor_0.jpg" alt="foto">
-        <img src="https://imgc.allpostersimages.com/img/posters/evening-tower-bridge-and-river-thames-london_u-L-P2QVZJ0.jpg?artPerspective=n" alt="foto 2">
+        <img src="https://www.abta.com/sites/default/files/styles/large/public/media/uploads/london-400x400-compressor_0.jpg"
+            alt="foto">
+        <img src="https://imgc.allpostersimages.com/img/posters/evening-tower-bridge-and-river-thames-london_u-L-P2QVZJ0.jpg?artPerspective=n"
+            alt="foto 2">
     </footer>
+
 </body>
 
-
-</html> <!--fine pagina-->
+</html>
