update <ul> and <li> order

--- a/index.html
+++ b/index.html
@@ -72,28 +72,40 @@
 
         <section> <!--info utili-->
             <h2>Info utili:</h2>
+
+
+        <section>
+            <h2>Info utili:</h2>
+
             <ol>
-                <li>Numeri utili di emergenza</li>
-                <ul>
-                    <li>999 - Emergenza</li>
-                    <li>101 - Numero Polizia</li>
-                    <li>111 - Numero Assistenza medica</li>
-                </ul>
-
-                <li>Hotel</li>
-                <ul>
-                    <li><strong>Nome hotel:</strong> Buckingham Palace</li>
-                    <li><strong>Indirizzo hotel:</strong> Westminster, London SW1A 1AA, Regno Unito</li>
-                </ul>
-
-                <li>Aereo</li>
-                <ul>
-                    <li><strong>Volo di andata:</strong> ore 09:30 da Milano Malpensa</li>
-                    <li><strong>Volo di ritorno:</strong> ore 18:30 da London Heathrow</li>
-                </ul>
+                <li>
+                    Numeri utili di emergenza
+                    <ul>
+                        <li>999 - Emergenza</li>
+                        <li>101 - Numero Polizia</li>
+                        <li>111 - Numero Assistenza medica</li>
+                    </ul>
+                </li>
+                <li>
+                    Hotel
+                    <ul>
+                        <li><strong>Nome hotel:</strong> Buckingham Palace</li>
+                        <li><strong>Indirizzo hotel:</strong> Westminster, London SW1A 1AA, Regno Unito</li>
+                    </ul>
+                </li>
+                <li>
+                    Aereo
+                    <ul>
+                        <li><strong>Volo di andata:</strong> ore 09:30 da Milano Malpensa</li>
+                        <li><strong>Volo di ritorno:</strong> ore 18:30 da London Heathrow</li>
+                    </ul>
+                </li>
             </ol>
+        </section>
             <hr>
         </section>
+
+
     </main>
 
 
